[package]
name = "rusty-pickle"
version = "0.1.0"
author = ["idclark <idclark13@gmail.com>"]
readme = "README.md"
description = "update me later"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
bincode = "1.0"
serde_yaml = "0.8"
serde_cbor = "0.11"

