[package]
name = "rusty-pickle"
version = "0.1.0"
author = ["idclark <idclark13@gmail.com>"]
readme = "README.md"
description = "A learning project to rewrite Python's pickledb in Rust. Cavear Emptor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[[example]]
name = "simple_pickle"
path = "examples/simple_pickle/src/main.rs"


